--- a/frontend/pages/pusat_informasi/topic-admin.html
+++ b/frontend/pages/pusat_informasi/topic-admin.html
@@ -63,6 +63,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/frontend/logic/topicAdmin.js"></script>
+    <script type="module" src="/frontend/logic/topicAdmin.js"></script>
   </body>
 </html>
