--- a/frontend/pages/admin/masterData.html
+++ b/frontend/pages/admin/masterData.html
@@ -125,6 +125,8 @@
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/masterData.js"></script>
   </body>
 </html>
