--- a/frontend/pages/admin/nomorRekening.html
+++ b/frontend/pages/admin/nomorRekening.html
@@ -203,6 +203,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/nomorRekening.js"></script>
   </body>
 </html>
