--- a/frontend/pages/admin/pendaftaranSiswa.html
+++ b/frontend/pages/admin/pendaftaranSiswa.html
@@ -220,6 +220,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/pendaftaranSiswa.js"></script>
   </body>
 </html>
