--- a/frontend/pages/pusat_informasi/create-information.html
+++ b/frontend/pages/pusat_informasi/create-information.html
@@ -94,6 +94,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/createInformation.js"></script>
   </body>
 </html>
