--- a/frontend/pages/pusat_informasi/topic.html
+++ b/frontend/pages/pusat_informasi/topic.html
@@ -40,6 +40,6 @@
       </div>
     </div>
 
-    <script src="/frontend/logic/topicUser.js"></script>
+    <script type="module" src="/frontend/logic/topicUser.js"></script>
   </body>
 </html>
