--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -105,6 +105,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       type="module"
       src="/frontend/logic/konfirmasiPembayaran.js"
