--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -34,6 +34,18 @@
             <ul class="flex gap-4 items-center">
               <li class="cursor-pointer">
                 <a
+                  href="/frontend/pages/admin/data_siswa.html"
+                  class="rounded-md bg-slate-900 xl:p-2 text-slate-100 xl:px-4 px-3 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
+                >
+                  <i class="fa-solid fa-user-group xl:text-lg text-sm"></i>
+                  <span
+                    class="text-xs xl:font-medium font-normal text-slate-200"
+                    >Pantau Siswa</span
+                  >
+                </a>
+              </li>
+              <li class="cursor-pointer">
+                <a
                   href="/frontend/pages/admin/masterData.html"
                   class="rounded-md bg-slate-900 xl:p-2 text-slate-100 xl:px-4 px-3 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
                 >
@@ -225,50 +237,15 @@
                 <th class="py-4 px-4 border-b text-center">Tagihan Dibuat</th>
               </tr>
             </thead>
-            <tbody>
-              <!-- <tr class="cursor-pointer hover:bg-gray-100">
-                <td
-                  class="flex items-center gap-2 py-4 px-1 border-b xl:w-auto min-w-36 max-w-56"
-                >
-                  <div class="size-8 rounded-full overflow-hidden">
-                    <img
-                      class="block size-full object-cover"
-                      src="/frontend/public/img/default-profile.jpeg"
-                      alt="user"
-                    />
-                  </div>
-                  <span class="text-[14px] font-semibold text-slate-600"
-                    >John Doe</span
-                  >
-                </td>
-
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
-                >
-                  XII-1
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
-                >
-                  2024/2025
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
-                >
-                  Rp.10.000
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
-                >
-                  Kamis, 20 April 92131
-                </td>
-              </tr> -->
-            </tbody>
+            <tbody></tbody>
           </table>
         </div>
       </div>
-      <div id="information-center" class="mt-48 max-w-9/12 mx-auto">
-        <section class="text-center">
+      <div
+        id="information-center"
+        class="xl:mt-48 w-full xl:max-w-9/12 mx-auto"
+      >
+        <section class="hidden lg:block text-center">
           <h1 class="my-2 text-center font-semibold text-slate-600 text-2xl">
             Media Informasi SMA Wahidiyah Kota Lumajang
           </h1>
@@ -280,10 +257,10 @@
 
         <section
           id="about-smawa-kota-lumajang"
-          class="relative min-h-[452px] bg-transparent after:content-[''] after:animate-spotlight-after after:text-red-500 after:absolute after:top-3/4 after:right-1/4 after:size-56 after:rounded-full after:bg-emerald-400 after:blur-3xl before:content-[''] before:animate-spotlight-bef before:absolute before:left-0 before:bottom-0 before:size-56 before:rounded-full before:bg-emerald-400 before:blur-3xl before:shadow-2xl before:shadow-emerald-300 before:text-slate-100 mt-10"
+          class="relative h-fit bg-red-300 xl:min-h-[452px] lg:bg-transparent after:hidden before:hidden lg:after:block lg:before:block after:content-[''] after:animate-spotlight-after after:text-red-500 after:absolute after:top-3/4 after:right-1/4 after:size-56 after:rounded-full after:bg-emerald-400 after:blur-3xl before:content-[''] before:animate-spotlight-bef before:absolute before:left-0 before:bottom-0 before:size-56 before:rounded-full before:bg-emerald-400 before:blur-3xl before:shadow-2xl before:shadow-emerald-300 before:text-slate-100 mt-10"
         >
           <div
-            class="w-full flex justify-center items-start gap-x-10 absolute top-3/4 left-1/2 -translate-x-1/2 -translate-y-3/4 z-30"
+            class="w-11/12 xl:w-full flex flex-col lg:flex-row justify-center items-start gap-x-10 absolute top-3/4 left-1/2 -translate-x-1/2 lg:-translate-y-3/4 -translate-y-[1%] z-30"
           >
             <div class="w-fit">
               <h1 class="capitalize text-slate-700 font-semibold text-xl my-3">
@@ -297,7 +274,7 @@
               />
             </div>
 
-            <div class="w-1/2 mt-14">
+            <div class="lg:w-1/2 mt-14">
               <h1 class="font-semibold text-slate-700 text-xl capitalize">
                 profil SMA wahidiyah kota lumajang
               </h1>
@@ -327,7 +304,9 @@
           </div>
         </section>
 
-        <section class="max-w-11/12 my-48 mx-auto">
+        <section
+          class="lg:block w-full lg:max-w-11/12 lg:my-48 mx-auto translate-y-[65%]"
+        >
           <h1
             class="text-slate-700 font-semibold text-3xl capitalize text-center"
           >
