--- a/frontend/pages/admin/masterData.html
+++ b/frontend/pages/admin/masterData.html
@@ -39,7 +39,7 @@
         </div>
 
         <div
-          class="flex xl:flex-row flex-col justify-between gap-3 items-center container xl:max-w-3xl w-[90%] absolute left-1/2 -translate-x-1/2 xl:translate-y-1/2 translate-y-1/4 top-14 bg-slate-200 px-4 py-2 rounded-lg shadow-lg"
+          class="flex xl:flex-row flex-col justify-between gap-3 items-center container xl:max-w-3xl w-[90%] absolute left-1/2 -translate-x-1/2 xl:translate-y-1/2 translate-y-1/4 top-14 bg-slate-100 px-4 py-2 rounded-lg shadow-lg"
         >
           <!-- Form Tambah Tahun Pelajaran -->
           <div class="bg-slate-200 w-full">
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div
-          class="absolute left-1/2 -bottom-[500px] -translate-x-1/2 translate-y-3/4 z-30 bg-transparent w-5xl px-3 py-6 rounded-lg shadow-lg"
+          class="absolute left-1/2 -bottom-[500px] -translate-x-1/2 translate-y-[125%] lg:translate-y-3/4 z-30 bg-transparent lg:w-5xl w-11/12 px-3 py-6 rounded-lg shadow-lg"
         >
           <section id="header-information-center" class="text-center">
             <h1 class="capitalize text-xl font-medium text-slate-700">
