ready to deploy

--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard Sistem Informasi SMA Wahidiyah Lumajang</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
   <body>
@@ -305,7 +305,7 @@
         </section>
 
         <section
-          class="lg:block w-full lg:max-w-11/12 lg:my-48 mx-auto translate-y-[65%]"
+          class="w-full lg:max-w-11/12 mx-auto translate-y-[65%] lg:translate-y-1/4"
         >
           <h1
             class="text-slate-700 font-semibold text-3xl capitalize text-center"
