--- a/frontend/pages/admin/masterData.html
+++ b/frontend/pages/admin/masterData.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buat Tagihan Siswa</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
-    <link
-      rel="stylesheet"
-      href="/frontend/node_modules/flatpickr/dist/flatpickr.min.css"
-    />
-    <script src="/frontend/node_modules/flatpickr/dist/flatpickr.min.js"></script>
+    <link rel="stylesheet" href="/frontend/logic/flatpickr/flatpickr.min.css" />
+    <script src="/frontend/logic/flatpickr/flatpickr.min.js"></script>
   </head>
   <body>
     <div class="min-h-fit bg-slate-100">
