--- a/frontend/pages/admin/opsiTagihan.html
+++ b/frontend/pages/admin/opsiTagihan.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
   </head>
   <body>
     <div class="relative min-h-screen overflow-hidden">
