--- a/frontend/pages/pusat_informasi/topic-admin.html
+++ b/frontend/pages/pusat_informasi/topic-admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pusat Informasi</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
   </head>
   <body>
     <div class="relative min-h-screen bg-slate-100">
