--- a/frontend/pages/user/dashboard_user.html
+++ b/frontend/pages/user/dashboard_user.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
-    <link rel="stylesheet" href="/frontend/assets//css/all.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
+    <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
   <body>
     <div class="min-h-screen overflow-x-hidden bg-slate-100">
