--- a/frontend/pages/admin/data_siswa.html
+++ b/frontend/pages/admin/data_siswa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users Page</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
   </head>
   <body
     class="relative bg-blue-50 flex items-center justify-center min-h-screen overflow-hidden"
@@ -76,44 +76,7 @@
       <div
         id="wrapper-students"
         class="grid grid-cols-1 md:grid-cols-3 gap-6 overflow-auto"
-      >
-        <!-- User 2 -->
-        <div class="bg-slate-100 rounded-lg">
-          <div class="flex items-center space-x-4 p-4">
-            <div class="flex-shrink-0">
-              <img
-                src="https://i.pravatar.cc/80?img=2"
-                alt="User Avatar"
-                class="w-16 h-16 rounded-full object-cover"
-              />
-            </div>
-            <div>
-              <h3 class="font-bold text-lg">Jesus Weiss</h3>
-              <p class="text-gray-600 text-xs">
-                <span id="kelas">XII-1</span>
-                ||
-                <span id="tahun-pelajaran">2024 / 2025</span>
-              </p>
-            </div>
-          </div>
-
-          <div class="flex justify-center items-center gap-x-2 mb-4">
-            <p
-              class="text-xs px-4 py-2 rounded-lg bg-white text-slate-600 font-medium"
-            >
-              NISN :
-              <span id="nisn" class="text-blue-600">8182773827382</span>
-            </p>
-
-            <p
-              class="text-xs px-4 py-2 rounded-lg bg-white text-slate-600 font-medium"
-            >
-              Nomor HP :
-              <span id="nomor-hp" class="text-blue-600">818277382738</span>
-            </p>
-          </div>
-        </div>
-      </div>
+      ></div>
     </div>
 
     <script type="module" src="/frontend/logic/dataSiswa.js"></script>
