--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buat Tagihan Siswa</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
 
     <script src="/frontend/logic/tableToExcel/table2Excel.js"></script>
