--- a/frontend/pages/admin/tambah_siswa.html
+++ b/frontend/pages/admin/tambah_siswa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tambah Siswa Sistem Informasi SMA Wahidiyah Lumajang</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
   </head>
   <body class="overflow-hidden">
     <div class="min-h-screen bg-slate-200">
@@ -284,7 +284,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/frontend/features/imageProfile/changeProfileUser.js"></script>
     <script src="/frontend/logic/qrcode/qrcode.min.js"></script>
-    <script src="/frontend/node_modules/html2canvas-pro/dist/html2canvas-pro.min.js"></script>
+    <script src="/frontend/logic/html2canvas/html2canvas-pro.min.js"></script>
     <script type="module" src="/frontend/logic/tambahSiswa.js"></script>
   </body>
 </html>
