--- a/frontend/pages/auth/login.html
+++ b/frontend/pages/auth/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
     <title>Login Page</title>
   </head>
   <body>
