--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konfirmasi Pembayaran</title>
-    <link rel="stylesheet" href="/frontend/styles/output.css" />
+    <link rel="stylesheet" href="/frontend/styles/minify.css" />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
   <body>
