--- a/frontend/pages/topic.html
+++ b/frontend/pages/topic.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pusat Informasi</title>
+
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
     <link rel="stylesheet" href="/frontend/styles/minify.css" />
   </head>
   <body>
     <div class="relative min-h-screen py-16 bg-slate-200 overflow-y-auto">
       <a
-        href="/frontend/pages/dashboard_user.html"
+        href="/frontend/pages/landingPage.html#contact"
         class="absolute top-10 left-12 px-5 py-3 rounded-md font-medium text-sm text-slate-100 bg-slate-600 transition-all duration-150 hover:bg-slate-500"
         >Kembali</a
       >
