--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard Sistem Informasi SMA Wahidiyah Lumajang</title>
-    <link rel="stylesheet" href="/frontend/styles/minify.css" />
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
-  <body>
+  <body class="lg:w-full overflow-x-hidden">
     <div class="min-h-fit">
       <div class="container mx-auto bg-slate-50">
         <!-- header -->
@@ -30,8 +36,45 @@
           <!-- logo end -->
 
           <!-- nav -->
-          <nav>
-            <ul class="flex gap-4 items-center">
+          <nav class="">
+            <button
+              type="button"
+              id="hamburger-menu"
+              class="block lg:hidden size-fit mr-4"
+            >
+              <i class="fa-solid fa-bars text-xl"></i>
+            </button>
+            <ul
+              id="mobile-navbar"
+              class="absolute top-16 right-4 bg-slate-100 lg:hidden flex flex-col justify-center items-start gap-y-2 px-3 py-4 rounded-lg shadow-md transition-all duration-500 translate-x-[150%]"
+            >
+              <li>
+                <a href="/frontend/pages/data_siswa.html" class="text-xs"
+                  >Pantau Siswa</a
+                >
+              </li>
+              <li>
+                <a href="/frontend/pages/manajemenAdmin.html" class="text-xs"
+                  >Manajemen Admin</a
+                >
+              </li>
+              <li>
+                <a href="/frontend/pages/masterData.html" class="text-xs"
+                  >Master Data</a
+                >
+              </li>
+              <li class="cursor-pointer mt-4">
+                <button
+                  id="mobile-button-logout"
+                  type="button"
+                  class="size-fit rounded-lg p-2 text-slate-100 flex justify-center items-center cursor-pointer bg-slate-700 px-3 py-2 text-xs"
+                >
+                  <i class="fa-solid fa-user text-[10px] pr-2.5"></i>
+                  <span class="text-[10px]">Logout</span>
+                </button>
+              </li>
+            </ul>
+            <ul class="lg:flex gap-4 items-center hidden">
               <li class="cursor-pointer">
                 <a
                   href="/frontend/pages/data_siswa.html"
@@ -41,6 +84,18 @@
                   <span
                     class="text-xs xl:font-medium font-normal text-slate-200"
                     >Pantau Siswa</span
+                  >
+                </a>
+              </li>
+              <li class="cursor-pointer">
+                <a
+                  href="/frontend/pages/manajemenAdmin.html"
+                  class="rounded-md bg-slate-900 xl:p-2 text-slate-100 xl:px-4 px-3 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
+                >
+                  <i class="fa-solid fa-user-group xl:text-lg text-sm"></i>
+                  <span
+                    class="text-xs xl:font-medium font-normal text-slate-200"
+                    >Manajemen Admin</span
                   >
                 </a>
               </li>
@@ -70,7 +125,9 @@
           <!-- nav end -->
 
           <!-- About User | Logout Section -->
-          <div class="absolute right-0 top-20 size-fit overflow-hidden">
+          <div
+            class="absolute right-0 top-20 size-fit overflow-hidden z-10 hidden lg:block"
+          >
             <div
               id="logout-section"
               class="w-52 rounded-sm shadow bg-slate-200 overflow-hidden transition-all duration-500 px-6 py-2 pt-8 -translate-y-52"
