--- a/frontend/pages/dashboard_user.html
+++ b/frontend/pages/dashboard_user.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/frontend/styles/minify.css" />
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
   <body>
@@ -27,11 +33,51 @@
         </div>
 
         <nav class="xl:scale-100 scale-75">
-          <ul class="flex xl:gap-12 gap-5 items-center">
+          <button
+            type="button"
+            id="hamburger-menu"
+            class="block lg:hidden size-fit ml-10"
+          >
+            <i class="fa-solid fa-bars text-xl"></i>
+          </button>
+          <ul
+            id="navbar-mobile-version"
+            class="flex flex-col justify-center items-start gap-y-5 border-2 border-slate-300 absolute top-12 -right-10 lg:hidden z-20 px-4 py-3 rounded-lg bg-slate-100 w-40 translate-x-[150%] transition-all duration-500"
+          >
+            <li class="text-slate-700 font-medium text-sm">
+              <a href="#">Home</a>
+            </li>
+            <li class="text-slate-700 font-medium text-sm">
+              <a href="/frontend/pages/buatPostinganSiswa.html"
+                >Buat Postingan</a
+              >
+            </li>
+            <li class="cursor-pointer">
+              <button
+                id="mobile-button-logout"
+                type="button"
+                class="size-fit rounded-full bg-slate-900 px-3 py-1.5 text-slate-100 flex justify-center items-center cursor-pointer"
+              >
+                <i class="fa-solid fa-user text-xs pr-2"></i>
+                <span class="text-sm font-medium">Logout</span>
+              </button>
+            </li>
+          </ul>
+          <ul class="lg:flex xl:gap-6 gap-5 items-center hidden">
             <li
-              class="bg-slate-700 text-slate-100 px-4 py-2 rounded-full font-normal"
+              class="bg-emerald-600 text-slate-100 px-4 py-2 rounded-full font-medium"
             >
               <a href="#">Home</a>
+            </li>
+
+            <li
+              class="bg-emerald-600 text-slate-100 px-4 py-2 rounded-full font-medium"
+            >
+              <a
+                href="/frontend/pages/buatPostinganSiswa.html"
+                id="create-information"
+                >Buat Postingan</a
+              >
             </li>
             <li class="cursor-pointer">
               <button
@@ -108,37 +154,6 @@
         <div
           class="flex justify-center items-center gap-6 absolute -bottom-20 left-1/2 -translate-x-1/2"
         >
-          <!-- <a
-            href="/pages/user/konfirmasi_pembayaran.html"
-            class="w-[300px] flex flex-col items-center justify-start px-8 py-6 bg-slate-100 rounded-md shadow-lg cursor-pointer transition-all duration-150 ease-in-out hover:shadow-xl hover:scale-105"
-          >
-            <div
-              class="size-14 rounded-full bg-slate-800 grid place-content-center"
-            >
-              <i
-                class="fa-solid fa-money-check-dollar text-2xl text-slate-100"
-              ></i>
-            </div>
-
-            <div class="flex flex-col items-center gap-4">
-              <h1 class="mt-3 font-medium text-slate-800 text-lg">
-                Konfirmasi Pembayaran SPP
-              </h1>
-
-              <p class="text-center text-xs text-slate-600">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
-                nulla voluptatem possimus beatae facilis ullam magni voluptatum
-                nihil aliquid sint.
-              </p>
-
-              <button
-                type="button"
-                class="block w-full py-2 px-4 rounded-lg text-slate-100 bg-slate-900 font-medium cursor-pointer text-sm transition-all duration-150 hover:bg-slate-700 capitalize"
-              >
-                kirim bukti pembayaran disini
-              </button>
-            </div>
-          </a> -->
           <a
             id="cek_tagihan_spp"
             class="w-[300px] flex flex-col items-center justify-start px-8 py-6 bg-slate-100 rounded-md shadow-lg cursor-pointer transition-all duration-150 ease-in-out hover:shadow-xl hover:scale-105"
@@ -157,9 +172,7 @@
               </h1>
 
               <p class="text-center text-xs text-slate-600">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
-                nulla voluptatem possimus beatae facilis ullam magni voluptatum
-                nihil aliquid sint.
+                Anda bisa membayar, mengecek, pembayaran anda disini!
               </p>
 
               <button
@@ -179,9 +192,7 @@
             Rekapan Aktivitas Terakhir Belakangan Ini
           </h1>
           <p class="mt-3 text-slate-500">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-            adipisci dolore nam porro aspernatur nisi consectetur soluta fugiat.
-            Inventore molestiae asperiores odio ex officiis
+            Berikut aktivitas administrasi atau pembayaran anda belakangan ini.
           </p>
         </div>
       </div>
@@ -208,7 +219,7 @@
         </div>
       </div>
 
-      <div id="information-center" class="mt-48 max-w-9/12 mx-auto">
+      <div id="information-center" class="mt-48 max-w-9/12 mx-auto hidden">
         <section class="text-center">
           <h1 class="my-2 text-center font-semibold text-slate-600 text-2xl">
             Media Informasi SMA Wahidiyah Kota Lumajang
