--- a/frontend/pages/detail_siswa.html
+++ b/frontend/pages/detail_siswa.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Pengguna</title>
-    <link rel="stylesheet" href="/frontend/styles/minify.css" />
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -60,7 +66,7 @@
     <div class="max-w-2xl w-full">
       <!-- Card dengan shadow dan border -->
       <div
-        class="bg-white rounded-2xl shadow-xl overflow-hidden border border-gray-100"
+        class="bg-white scale-90 rounded-2xl shadow-xl overflow-hidden border border-gray-100"
       >
         <!-- Header stylish -->
         <div
@@ -204,6 +210,44 @@
               NISN terdiri dari 10 digit angka
             </p>
           </div>
+          <div class="space-y-2">
+            <label
+              for="alamat-siswa"
+              class="block text-sm font-medium text-gray-700 flex items-center"
+            >
+              <i
+                data-feather="credit-card"
+                class="w-4 h-4 mr-2 text-emerald-500"
+              ></i>
+              Alamat Siswa
+            </label>
+            <input
+              type="text"
+              id="alamat-siswa"
+              name="alamat-siswa"
+              class="w-full px-4 py-3 border border-gray-200 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition-all duration-200"
+              placeholder="Masukkan alamat siswa"
+            />
+          </div>
+          <div class="space-y-2">
+            <label
+              for="tanggal-lahir"
+              class="block text-sm font-medium text-gray-700 flex items-center"
+            >
+              <i
+                data-feather="credit-card"
+                class="w-4 h-4 mr-2 text-emerald-500"
+              ></i>
+              Tanggal Lahir
+            </label>
+            <input
+              type="text"
+              id="tanggal-lahir"
+              name="tanggal-lahir"
+              class="w-full px-4 py-3 border border-gray-200 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition-all duration-200"
+              placeholder="Tanggal lahir siswa"
+            />
+          </div>
 
           <!-- Tombol Terapkan dengan efek hover dan active -->
           <div
@@ -229,12 +273,6 @@
         </form>
 
         <!-- Footer dengan desain yang lebih menarik -->
-        <div class="bg-gray-50 px-8 py-4 border-t border-gray-100">
-          <div class="flex items-center justify-center text-sm text-gray-500">
-            <i data-feather="shield" class="w-4 h-4 mr-2 text-emerald-400"></i>
-            <span>Data yang dimasukkan dilindungi dan dienkripsi</span>
-          </div>
-        </div>
       </div>
 
       <!-- Card indicator -->
