--- a/frontend/pages/opsiTagihan.html
+++ b/frontend/pages/opsiTagihan.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
     <link rel="stylesheet" href="/frontend/styles/output.css" />
   </head>
