--- a/frontend/pages/pembayaranViaAdmin.html
+++ b/frontend/pages/pembayaranViaAdmin.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buat Tagihan Siswa</title>
 
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <!-- <link rel="stylesheet" href="/assets/css/all.css" /> -->
