--- a/frontend/pages/pendaftaranUlang.html
+++ b/frontend/pages/pendaftaranUlang.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link
+      rel="icon"
+      type="image/"
+      href="/frontend/public/img/smawa-logo-transparent.png"
+      sizes="180x180"
+    />
     <link rel="stylesheet" href="/frontend/styles/output.css" />
     <link rel="stylesheet" href="/frontend/assets/css/all.css" />
   </head>
